2006-02-02  Tony Ottosson  <tonyottosson@users.sourceforge.net>
	
	* itpp/base/newton_search.{h,cpp}, tests/newton_search_test.cpp:
	Newton search optimization routines. For now the BFGS algorithm
	and line-search. For matlab compatibility the fminunc() is
	implemented.

2006-02-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/transforms.cpp: Added DCT implementation based on the
	ACML library

	* configure.ac, config/acx_fft.m4, itpp/base/transforms.cpp,
	tests/transforms_test.cpp, tests/transforms_test.ref: New FFT and
	IFFT implementations added, based on the external ACML library.
	DCT and IDCT are still missing.

	* tests/Makefile.am, tests/fft_test.cpp, tests/fft_test.ref:
	Removed fft tests because they duplicated transform tests

	* itpp/protocols/tcp.cpp: Small fix that solves MSVC++ .NET
	compilation problem (#include <ctime>) (merged from itpp-3-9-branch)

2006-02-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/transforms.cpp: Fixed bug [1418707] by adding the
	FFTW_UNALIGNED option to the plan creation flags, which allows a
	standard memory allocation of input and output data. This
	temporary solution reduces performance on processors that use SSE
	and SSE2 instructions. (merged from itpp-3-9-branch)

	* configure.ac, NEWS: Updated for the next bug-fix release (merged
	from itpp-3-9-branch)

2006-01-31  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, config/*.m4, itpp-config.in, itpp.pc.in,
	doc/doxygen_html.cfg.in, itpp/config_msvc.h, itpp/base/*.{cpp,h},
	tests/*.cpp: Major redesign of the configuration scripts.

	The following things changed: 
	- added support for ACML (AMD Core Math Library)
	- checks for BLAS now detect MKL, ACML, ATLAS and reference
	(from Netlib) BLAS implementations; if found, HAVE_BLAS is defined
	- checks for LAPACK also detect MKL, ACML, ATLAS and reference
	LAPACK library; if found, HAVE_LAPACK is defined
	- checks for CBLAS detect MKL, ATLAS and reference implementation, 