@@ -2,42 +2,9 @@
 \mainpage Welcome to IT++!
 
 \htmlonly
-<table cellpadding="10" cellspacing="0" border="0" width="100%">
-<tr>
-<td valign="top" width="20%">
-<small>
 
-<b>Getting Started:</b><br>
-<a href="installation.html">Installation</a><br>
-<a href="linking.html">Linking with IT++</a><br>
-<a href="users_guide.html">Short Introduction to IT++</a><br>
-<a href="tutorial.html">Some Tutorial Examples</a><br>
-<a href="verification.html">IT++ Verification</a><br>
-<a href="copyright.html">Copyright and License</a><br>
-<a href="help_wanted.html">Make a Difference</a><br>
-<br>
-<b>Download IT++:</b><br>
-<a href="http://sourceforge.net/project/showfiles.php?group_id=37044">Files at SourceForge</a><br>
-<a href="http://prdownloads.sourceforge.net/itpp/itpp-@PACKAGE_VERSION@.tar.gz?download">itpp-@PACKAGE_VERSION@.tar.gz</a><br>
-<a href="http://itpp.sourceforge.net/doc/itpp-html-doc-@PACKAGE_VERSION@.tar.gz">itpp-html-doc-@PACKAGE_VERSION@.tar.gz</a><br>
-<a href="http://prdownloads.sourceforge.net/itpp/itpp-external-2.0.0.tar.gz?download">itpp-external-2.0.0.tar.gz</a><br>
-<br>
-<b>Bugs and Forums:</b><br>
-<a href="http://sourceforge.net/tracker/?atid=418758&group_id=37044&func=browse">Bug Reports</a><br>
-<a href="http://sourceforge.net/forum/forum.php?forum_id=115656">Ask for Help</a><br>
-<a href="http://sourceforge.net/forum/forum.php?forum_id=115655">Discuss IT++</a><br>
-<br>
-<b>What's New (in CVS):</b><br>
-<a href="http://cvs.sourceforge.net/viewcvs.py/itpp/itpp/NEWS?view=markup">NEWS</a><br>
-<a href="http://cvs.sourceforge.net/viewcvs.py/itpp/itpp/ChangeLog?view=markup">ChangeLog</a><br>
-<br>
-<b>Previous Stable Releases:</b><br>
-<b><a href="http://itpp.sourceforge.net/3.8.1/">3.9.1</a></b><br>
-<b><a href="http://itpp.sourceforge.net/3.8.1/">3.8.1</a></b><br>
-
-</small>
-</td>
-<td valign="top">          
+<div style="position:relative; margin:0 245px 0 225px; text-align:justify;">
+<!-- start of center block -->
 
 <h3> Introduction </h3>
 
@@ -52,16 +19,31 @@ developed as a part of the European Network of Excellence
 and lots of functions for vectors and matrices. Such a kernel makes IT++
 library similar to Matlab. </p>
 
-<p> IT++ makes an extensive use of existing open-source libraries for
-increased functionality, speed and accuracy. In particular FFTW, ATLAS (or
-CBLAS) and LAPACK libraries are used. Optionally an optimized Intel Math
-Kernel Library (MKL) can be used instead. It might be possible to compile
-and use IT++ without FFTW, ATLAS (or CBLAS) and LAPACK (or without MKL), but
-the functionality will be reduced. </p> 
+<p> IT++ makes an extensive use of existing open-source libraries (but not
+only) for increased functionality, speed and accuracy. In particular 
+<a href="http://www.netlib.org/blas/">BLAS</a>,
+<a href="http://www.netlib.org/blas/">CBLAS</a>, 
+<a href="http://www.netlib.org/lapack/">LAPACK</a> and 
+<a href="http://www.fftw.org/">FFTW</a> libraries might be used. 
+Instead of NetLib's reference BLAS and LAPACK, some optimized, 
+platform-specific, libraries can be used as well, i.e.: </p>
+<ul>
+<li> <a href="http://math-atlas.sourceforge.net/">ATLAS</a> 
+(<em>Automatically Tuned Linear Algebra Software</em>) - includes
+optimised BLAS, CBLAS and a limited set of LAPACK routines  </li>
+<li> <a href="http://www.intel.com/cd/software/products/asmo-na/eng/perflib/mkl/">MKL</a> 
+(<em>Intel Math Kernel Library</em>) - includes all required BLAS,
+CBLAS, LAPACK and FFT routines (FFTW not required)</li>
+<li> <a href="http://developer.amd.com/acml.aspx">ACML</a> 
+(<em>AMD Core Math Library</em>) - includes BLAS, LAPACK and FFT
+routines (FFTW not required). </li>
+</ul>
+<p> It might be possible to compile and use IT++ without any of the above
+listed libraries, but the functionality will be reduced. </p> 
       
 <p> The IT++ library originates from the former department of Information
-Theory at the Chalmers University of Technology, Gothenburg, Sweden. Since
-the library is coded in C++ the name IT++ seemed like a good idea at the
+Theory at the Chalmers University of Technology, Gothenburg, Sweden. Because
+the library is coded in C++, the name IT++ seemed like a good idea at the
 time. While departments come and go, IT++ have developed a life of its'
 own and is now released under the terms of the Gnu Public License (GPL) for
 you to enjoy. </p> 
@@ -70,39 +52,94 @@ you to enjoy. </p>
 Cygwin or Microsoft Visual C++ .NET) and Mac OS X (more testers needed).
 </p>
 
-</td>
-<td valign="top" width="20%" align="left">
-<small>
+<!-- end of center block -->
+</div>
 
-<b>IT++ Development:</b><br>
-<a href="http://sourceforge.net/projects/itpp/">IT++ at SourceForge</a><br>
-<a href="http://sourceforge.net/cvs/?group_id=37044">IT++ CVS Repository</a><br>
-<a href="codingrules.html">Coding Rules</a><br>
-<a href="documentation.html">Documentation Rules</a><br>
-<a href="test.html">Test Rules</a><br>
-<br>
-<b>External Libraries:</b><br>
-<a href="http://www.fftw.org/">Fastest Fourier Transform in the West (FFTW)</a><br>
-<a href="http://www.netlib.org/blas/">Basic Linear Algebra Subprograms (BLAS)</a><br>
-<a href="http://math-atlas.sourceforge.net/">Automatically Tuned Linear Algebra Software (ATLAS)</a><br>
-<a href="http://www.netlib.org/lapack/">Linear Algebra PACKage (LAPACK)</a><br>
-<a href="http://www.intel.com/cd/software/products/asmo-na/eng/perflib/219769.htm">Intel Math Kernel Library (MKL)</a><br>
-<br>
-<b>GNU Tools:</b><br>
-<a href="http://gcc.gnu.org/">GNU GCC</a><br>
-<a href="http://www.gnu.org/software/make/">GNU Make</a><br>
-<a href="http://www.gnu.org/software/autoconf/">GNU Autoconf</a><br>
-<a href="http://www.gnu.org/software/automake/">GNU Automake</a><br>
-<a href="http://www.gnu.org/software/gdb/gdb.html">GNU GDB</a><br>
-<br>
-<b>Other Links:</b><br>
-<a href="http://www.doxygen.org/">Doxygen</a><br>
-<a href="http://cvs.nongnu.org/">CVS</a><br>
-<a href="http://sources.redhat.com/cygwin/">Cygwin</a><br>
+<div style="position:absolute; left:20px; top:160px; width:200px; margin:2px; font-size:80%;">
+<!-- start of left margin -->
 
-</small>
-</td>
-</tr> 
-</table>
+<b>Getting Started:</b>
+<ul>
+<li><a href="installation.html">Installation</a></li>
+<li><a href="linking.html">Linking with IT++</a></li>
+<li><a href="users_guide.html">Short Introduction to IT++</a></li>
+<li><a href="tutorial.html">Some Tutorial Examples</a></li>
+<li><a href="verification.html">IT++ Verification</a></li>
+<li><a href="copyright.html">Copyright and License</a></li>
+<li><a href="help_wanted.html">Make a Difference</a></li>
+</ul>
+
+<b>Download IT++:</b>
+<ul>
+<li><a href="http://sourceforge.net/project/showfiles.php?group_id=37044">Files at SourceForge</a></li>
+<li><a href="http://prdownloads.sourceforge.net/itpp/itpp-@PACKAGE_VERSION@.tar.gz?download">itpp-@PACKAGE_VERSION@.tar.gz</a></li>
+<li><a href="http://itpp.sourceforge.net/doc/itpp-html-doc-@PACKAGE_VERSION@.tar.gz">itpp-html-doc-@PACKAGE_VERSION@.tar.gz</a></li>
+<li><a href="http://prdownloads.sourceforge.net/itpp/itpp-external-2.0.0.tar.gz?download">itpp-external-2.0.0.tar.gz</a></li>
+</ul>
+
+<b>Bugs and Forums:</b>
+<ul>
+<li><a href="http://sourceforge.net/tracker/?atid=418758&amp;group_id=37044&amp;func=browse">Bug Reports</a></li>
+<li><a href="http://sourceforge.net/forum/forum.php?forum_id=115656">Ask for Help</a></li>
+<li><a href="http://sourceforge.net/forum/forum.php?forum_id=115655">Discuss IT++</a></li>
+</ul>
+
+<b>What's New (in CVS):</b>
+<ul>
+<li><a href="http://cvs.sourceforge.net/viewcvs.py/itpp/itpp/NEWS?view=markup">NEWS</a></li>
+<li><a href="http://cvs.sourceforge.net/viewcvs.py/itpp/itpp/ChangeLog?view=markup">ChangeLog</a></li>
+</ul>
+
+<b>Previous Stable Releases:</b>
+<ul>
+<li><b><a href="http://itpp.sourceforge.net/3.9.1/">3.9.1</a></b></li>
+<li><b><a href="http://itpp.sourceforge.net/3.8.1/">3.8.1</a></b></li>
+</ul>
+
+<!-- end of left margin -->
+</div>
+
+<div style="position:absolute; top:160px; right:20px; width:220px; margin:2px; font-size:80%;">
+<!-- start of right margin -->
+
+<b>IT++ Development:</b>
+<ul>
+<li><a href="http://sourceforge.net/projects/itpp/">IT++ at SourceForge</a></li>
+<li><a href="http://sourceforge.net/cvs/?group_id=37044">IT++ CVS Repository</a></li>
+<li><a href="codingrules.html">Coding Rules</a></li>
+<li><a href="documentation.html">Documentation Rules</a></li>
+<li><a href="test.html">Test Rules</a></li>
+</ul>
+
+<b>External Libraries:</b>
+<ul>
+<li><a href="http://www.netlib.org/blas/">BLAS (Basic Linear Algebra Subprograms) and CBLAS</a></li>
+<li><a href="http://www.netlib.org/lapack/">LAPACK (Linear Algebra PACKage)</a></li>
+<li><a href="http://www.fftw.org/">FFTW (Fastest Fourier Transform in the West)</a></li>
+<li><a href="http://math-atlas.sourceforge.net/">ATLAS (Automatically Tuned Linear Algebra Software)</a></li>
+<li><a href="http://developer.amd.com/acml.aspx">ACML (AMD Core Math Library)</a></li>
+<li><a href="http://www.intel.com/cd/software/products/asmo-na/eng/perflib/mkl/">MKL (Intel Math Kernel Library)</a></li>
+</ul>
+
+<b>GNU Tools:</b>
+<ul>
+<li><a href="http://gcc.gnu.org/">GNU GCC</a></li>
+<li><a href="http://www.gnu.org/software/make/">GNU Make</a></li>
+<li><a href="http://www.gnu.org/software/autoconf/">GNU Autoconf</a></li>
+<li><a href="http://www.gnu.org/software/automake/">GNU Automake</a></li>
+<li><a href="http://www.gnu.org/software/libtool/">GNU Libtool</a></li>
+<li><a href="http://www.gnu.org/software/gdb/gdb.html">GNU GDB</a></li>
+</ul>
+
+<b>Other Links:</b>
+<ul>
+<li><a href="http://www.doxygen.org/">Doxygen</a></li>
+<li><a href="http://cvs.nongnu.org/">CVS</a></li>
+<li><a href="http://sources.redhat.com/cygwin/">Cygwin</a></li>
+</ul>
+
+<!-- end of right margin -->
+</div>
+
 \endhtmlonly
 */
